--- a/templates/base.html
+++ b/templates/base.html
@@ -1,55 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet"
-href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- title -->
+<title>Fruitkha - Slider Version</title>
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<!-- favicon -->
+<link rel="shortcut icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
+<!-- google font -->
+<link href="{% static https://fonts.googleapis.com/css?family=Open+Sans:300,400,700 %}" rel="stylesheet">
+<link href="{% https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap %}" rel="stylesheet">
+<!-- fontawesome -->
+<link rel="stylesheet" href="{% static 'assets/css/all.min.css' %}">
+<!-- bootstrap -->
+<link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
+<!-- owl carousel -->
+<link rel="stylesheet" href=" {% static 'assets/css/owl.carousel.css' %}">
+<!-- magnific popup -->
+<link rel="stylesheet" href="{% static 'assets/css/magnific-popup.css' %}">
+<!-- animate css -->
+<link rel="stylesheet" href="{% static 'assets/css/animate.css' %}">
+<!-- mean menu css -->
+<link rel="stylesheet" href="{% static 'assets/css/meanmenu.min.css' %}">
+<!-- main style -->
+<link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
+<!-- responsive -->
+<link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 
-    <title>{% block title %} Electronics Commerce {% endblock %}</title>
-    <style type="text/css">
-    .min-h-100 { min-height: 100%; }
-    </style>
 </head>
 <body>
-    <div class="row">
-    <div id="header" class="bg-info col-sm-12 col-md-12 col-lg-12">
-        <div class="row">
-            <div class="col-sm-4 col-md-4 col-lg-4">
 
-                <img src="https://img.favpng.com/23/7/24/logo-e-commerce-digital-marketing-brand-trade-png-favpng-xTcxcPuHCYQBUh9P8q30ETQji.jpg" alt="E-commerce Logo" style="height:50px; width:auto;" />
+<!--PreLoader-->
+<div class="loader">
+    <div class="loader-inner">
+        <div class="circle"></div>
+    </div>
+</div>
+<!--PreLoader Ends-->
+
+<!-- header -->
+<div class="top-header-area" id="sticker">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-sm-12 text-center">
+                <div class="main-menu-wrap">
+                    <!-- logo -->
+                    <div class="site-logo">
+                        <a href="{% static 'index.html' %} ">
+                            <img src="{% static 'assets/img/logo.png' %}" alt="">
+                        </a>
+                    </div>
+                    <!-- logo -->
+
+                    <!-- menu start -->
+                    <nav class="main-menu">
+                        <ul>
+                            <li class="current-list-item"><a href="#">Home</a>
+                                <ul class="sub-menu">
+                                    <li><a href="{% static 'index.html' %} ">Static Home</a></li>
+                                    <li><a href="{% static 'index_2.html' %}">Slider Home</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="{% static 'about.html' %}">About</a></li>
+                            <li><a href="#">Pages</a>
+                                <ul class="sub-menu">
+                                    <li><a href="{% static '404.html' %} ">404 page</a></li>
+                                    <li><a href="{% static 'about.html' %}">About</a></li>
+                                    <li><a href="{% static 'cart.html' %}">Cart</a></li>
+                                    <li><a href="{% static 'checkout.html' %} ">Check Out</a></li>
+                                    <li><a href="{% static 'contact.html' %}">Contact</a></li>
+                                    <li><a href="{% static 'news.html' %}">News</a></li>
+                                    <li><a href="{% static 'shop.html' %}">Shop</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="{% static 'news.html' %}">News</a>
+                                <ul class="sub-menu">
+                                    <li><a href="{% static 'news.html' %}">News</a></li>
+                                    <li><a href="{% static 'single-news.html' %}">Single News</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="{% static 'contact.html' %}">Contact</a></li>
+                            <li><a href="{% static 'shop.html' %}">Shop</a>
+                                <ul class="sub-menu">
+                                    <li><a href="{% static 'shop.html' %}">Shop</a></li>
+                                    <li><a href="{% static 'checkout.html' %}">Check Out</a></li>
+                                    <li><a href="{% static 'single-product.html' %}">Single Product</a></li>
+                                    <li><a href="{% static 'cart.html' %} ">Cart</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <div class="header-icons">
+                                    <a class="shopping-cart" href="{% static 'cart.html' %}"><i class="fas fa-shopping-cart"></i></a>
+                                    <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+                                </div>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+                    <div class="mobile-menu"></div>
+                    <!-- menu end -->
+                </div>
             </div>
-        <div class="col-sm-7 col-md-7 col-lg-7">
-            <h2>
-                {% block header %} Electronic Commerce {% endblock %}
-            </h2>
-        </div>
-        <div class="col-sm-1 col-md-1 col-lg-1">
-            <a class="btn btn-success btn-sm ml-3" href="#cart-model" data-toggle="modal">
-                <span>Cart</span>
-                <span class="badge badge-light">
-                    <label id="cart_qty">0</label>
-                </span>
-            </a>
         </div>
     </div>
 </div>
+<!-- end header -->
+
+<!-- search area -->
+<div class="search-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <span class="close-btn"><i class="fas fa-window-close"></i></span>
+                <div class="search-bar">
+                    <div class="search-bar-tablecell">
+                        <h3>Search For:</h3>
+                        <input type="text" placeholder="Keywords">
+                        <button type="submit">Search <i class="fas fa-search"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="row">
-    <div id="sidebar" class="min-h-100 min-h-800 bg-light border col-sm-3 col-md-3 col-lg-3">
-    {% block sidebar %}
-        <ul>
-            <li><a href="/admin/"><i class="fa fa-user" aria-hidden="true"></i> Admin</a></li>
-            <li><a href="/"><i class="fa fa-search" aria-hidden="true"></i>Product</a></li>
-            <li><a href="/cart/"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a></li>
-        </ul>
-        {% endblock %}
-    </div>
-    <div id="content" class="min-h-100 bg-light col-sm-9 col-md-9 col-lg-9">
-        {% block content %}{% endblock %}
-    </div>
-    </div>
+<!-- end search area -->
+
+<body>
+    {% block content %}
+    {% endblock %}
 </body>
+
+<!-- footer -->
+<div class="footer-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-box about-widget">
+                    <h2 class="widget-title">About us</h2>
+                    <p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-box get-in-touch">
+                    <h2 class="widget-title">Get in Touch</h2>
+                    <ul>
+                        <li>34/8, East Hukupara, Gifirtok, Sadan.</li>
+                        <li>support@fruitkha.com</li>
+                        <li>+00 111 222 3333</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-box pages">
+                    <h2 class="widget-title">Pages</h2>
+                    <ul>
+                        <li><a href="{% static 'index.html' %}">Home</a></li>
+                        <li><a href="{% static 'about.html' %}">About</a></li>
+                        <li><a href="{% static 'services.html' %}">Shop</a></li>
+                        <li><a href="{% static 'news.html' %}">News</a></li>
+                        <li><a href="{% static 'contact.html' %}">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-box subscribe">
+                    <h2 class="widget-title">Subscribe</h2>
+                    <p>Subscribe to our mailing list to get the latest updates.</p>
+                    <form action="index.html">
+                        <input type="email" placeholder="Email">
+                        <button type="submit"><i class="fas fa-paper-plane"></i></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end footer -->
+
+<!-- copyright -->
+<div class="copyright">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-12">
+                <p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.</p>
+            </div>
+            <div class="col-lg-6 text-right col-md-12">
+                <div class="social-icons">
+                    <ul>
+                        <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end copyright -->
+
+<!-- jquery -->
+<script src="{% static 'assets/js/jquery-1.11.3.min.js' %}"></script>
+<!-- bootstrap -->
+<script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %} "></script>
+<!-- count down -->
+<script src="{% static 'assets/js/jquery.countdown.js' %} "></script>
+<!-- isotope -->
+<script src="{% static 'assets/js/jquery.isotope-3.0.6.min.js' %}"></script>
+<!-- waypoints -->
+<script src="{% static 'assets/js/waypoints.js' %}"></script>
+<!-- owl carousel -->
+<script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+<!-- magnific popup -->
+<script src="{% static'assets/js/jquery.magnific-popup.min.js' %}"></script>
+<!-- mean menu -->
+<script src="{% static 'assets/js/jquery.meanmenu.min.js' %}"></script>
+<!-- sticker js -->
+<script src="{% static 'assets/js/sticker.js' %}"></script>
+<!-- main js -->
+<script src="{% static 'assets/js/main.js' %}"></script>
 </html>
