--- a/templates/base.html
+++ b/templates/base.html
@@ -1,133 +1,135 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-<!-- title -->
-<title>Fruitkha - Slider Version</title>
 
-<!-- favicon -->
-<link rel="shortcut icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
-<!-- google font -->
-<link href="{% static https://fonts.googleapis.com/css?family=Open+Sans:300,400,700 %}" rel="stylesheet">
-<link href="{% https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap %}" rel="stylesheet">
-<!-- fontawesome -->
-<link rel="stylesheet" href="{% static 'assets/css/all.min.css' %}">
-<!-- bootstrap -->
-<link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
-<!-- owl carousel -->
-<link rel="stylesheet" href=" {% static 'assets/css/owl.carousel.css' %}">
-<!-- magnific popup -->
-<link rel="stylesheet" href="{% static 'assets/css/magnific-popup.css' %}">
-<!-- animate css -->
-<link rel="stylesheet" href="{% static 'assets/css/animate.css' %}">
-<!-- mean menu css -->
-<link rel="stylesheet" href="{% static 'assets/css/meanmenu.min.css' %}">
-<!-- main style -->
-<link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
-<!-- responsive -->
-<link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+
+	<!-- title -->
+	<title>Fruitkha</title>
+
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
+	<!-- google font -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+	<!-- fontawesome -->
+	<link rel="stylesheet" href="{% static 'assets/css/all.min.css' %}">
+	<!-- bootstrap -->
+	<link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
+	<!-- owl carousel -->
+	<link rel="stylesheet" href="{% static 'assets/css/owl.carousel.css' %}">
+	<!-- magnific popup -->
+	<link rel="stylesheet" href="assets/css/magnific-popup.css">
+	<!-- animate css -->
+	<link rel="stylesheet" href="assets/css/animate.css">
+	<!-- mean menu css -->
+	<link rel="stylesheet" href="assets/css/meanmenu.min.css">
+	<!-- main style -->
+	<link rel="stylesheet" href="assets/css/main.css">
+	<!-- responsive -->
+	<link rel="stylesheet" href="assets/css/responsive.css">
 
 </head>
 <body>
-
-<!--PreLoader-->
-<div class="loader">
-    <div class="loader-inner">
-        <div class="circle"></div>
-    </div>
-</div>
-<!--PreLoader Ends-->
-
-<!-- header -->
-<div class="top-header-area" id="sticker">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-sm-12 text-center">
-                <div class="main-menu-wrap">
-                    <!-- logo -->
-                    <div class="site-logo">
-                        <a href="{% static 'index.html' %} ">
-                            <img src="{% static 'assets/img/logo.png' %}" alt="">
-                        </a>
-                    </div>
-                    <!-- logo -->
-
-                    <!-- menu start -->
-                    <nav class="main-menu">
-                        <ul>
-                            <li class="current-list-item"><a href="#">Home</a>
-                                <ul class="sub-menu">
-                                    <li><a href="{% static 'index.html' %} ">Static Home</a></li>
-                                    <li><a href="{% static 'index_2.html' %}">Slider Home</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="{% static 'about.html' %}">About</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="sub-menu">
-                                    <li><a href="{% static '404.html' %} ">404 page</a></li>
-                                    <li><a href="{% static 'about.html' %}">About</a></li>
-                                    <li><a href="{% static 'cart.html' %}">Cart</a></li>
-                                    <li><a href="{% static 'checkout.html' %} ">Check Out</a></li>
-                                    <li><a href="{% static 'contact.html' %}">Contact</a></li>
-                                    <li><a href="{% static 'news.html' %}">News</a></li>
-                                    <li><a href="{% static 'shop.html' %}">Shop</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="{% static 'news.html' %}">News</a>
-                                <ul class="sub-menu">
-                                    <li><a href="{% static 'news.html' %}">News</a></li>
-                                    <li><a href="{% static 'single-news.html' %}">Single News</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="{% static 'contact.html' %}">Contact</a></li>
-                            <li><a href="{% static 'shop.html' %}">Shop</a>
-                                <ul class="sub-menu">
-                                    <li><a href="{% static 'shop.html' %}">Shop</a></li>
-                                    <li><a href="{% static 'checkout.html' %}">Check Out</a></li>
-                                    <li><a href="{% static 'single-product.html' %}">Single Product</a></li>
-                                    <li><a href="{% static 'cart.html' %} ">Cart</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <div class="header-icons">
-                                    <a class="shopping-cart" href="{% static 'cart.html' %}"><i class="fas fa-shopping-cart"></i></a>
-                                    <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
-                                </div>
-                            </li>
-                        </ul>
-                    </nav>
-                    <a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
-                    <div class="mobile-menu"></div>
-                    <!-- menu end -->
-                </div>
-            </div>
+	
+	<!--PreLoader-->
+    <div class="loader">
+        <div class="loader-inner">
+            <div class="circle"></div>
         </div>
     </div>
-</div>
-<!-- end header -->
+    <!--PreLoader Ends-->
+	
+	<!-- header -->
+	<div class="top-header-area" id="sticker">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-sm-12 text-center">
+					<div class="main-menu-wrap">
+						<!-- logo -->
+						<div class="site-logo">
+							<a href="{% static 'index.html' %}">
+								<img src="{% static 'static/img/logo.png' %}" alt="">
+							</a>
+						</div>
+						<!-- logo -->
 
-<!-- search area -->
-<div class="search-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <span class="close-btn"><i class="fas fa-window-close"></i></span>
-                <div class="search-bar">
-                    <div class="search-bar-tablecell">
-                        <h3>Search For:</h3>
-                        <input type="text" placeholder="Keywords">
-                        <button type="submit">Search <i class="fas fa-search"></i></button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end search area -->
-
-<body>
-    {% block content %}
-    {% endblock %}
-</body>
-
+						<!-- menu start -->
+						<nav class="main-menu">
+							<ul>
+								<li class="current-list-item"><a href="#">Home</a>
+									<ul class="sub-menu">
+										<li><a href="{% static 'index.html' %} ">Static Home</a></li>
+										<li><a href="{% static 'index_2.html' %}">Slider Home</a></li>
+									</ul>
+								</li>
+								<li><a href="{% static 'about.html' %}">About</a></li>
+								<li><a href="#">Pages</a>
+									<ul class="sub-menu">
+										<li><a href="{% static '404.html' %} ">404 page</a></li>
+										<li><a href="{% static 'about.html' %} ">About</a></li>
+										<li><a href="cart.html">Cart</a></li>
+										<li><a href="checkout.html">Check Out</a></li>
+										<li><a href="contact.html">Contact</a></li>
+										<li><a href="news.html">News</a></li>
+										<li><a href="shop.html">Shop</a></li>
+									</ul>
+								</li>
+								<li><a href="news.html">News</a>
+									<ul class="sub-menu">
+										<li><a href="news.html">News</a></li>
+										<li><a href="single-news.html">Single News</a></li>
+									</ul>
+								</li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="shop.html">Shop</a>
+									<ul class="sub-menu">
+										<li><a href="shop.html">Shop</a></li>
+										<li><a href="checkout.html">Check Out</a></li>
+										<li><a href="single-product.html">Single Product</a></li>
+										<li><a href="cart.html">Cart</a></li>
+									</ul>
+								</li>
+								<li>
+									<div class="header-icons">
+										<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+										<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+									</div>
+								</li>
+							</ul>
+						</nav>
+						<a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+						<div class="mobile-menu"></div>
+						<!-- menu end -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end header -->
+	
+	<!-- search area -->
+	<div class="search-area">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<span class="close-btn"><i class="fas fa-window-close"></i></span>
+					<div class="search-bar">
+						<div class="search-bar-tablecell">
+							<h3>Search For:</h3>
+							<input type="text" placeholder="Keywords">
+							<button type="submit">Search <i class="fas fa-search"></i></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end search area -->
 <!-- footer -->
 <div class="footer-area">
     <div class="container">
@@ -152,11 +154,11 @@
                 <div class="footer-box pages">
                     <h2 class="widget-title">Pages</h2>
                     <ul>
-                        <li><a href="{% static 'index.html' %}">Home</a></li>
-                        <li><a href="{% static 'about.html' %}">About</a></li>
-                        <li><a href="{% static 'services.html' %}">Shop</a></li>
-                        <li><a href="{% static 'news.html' %}">News</a></li>
-                        <li><a href="{% static 'contact.html' %}">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Shop</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -199,23 +201,25 @@
 <!-- end copyright -->
 
 <!-- jquery -->
-<script src="{% static 'assets/js/jquery-1.11.3.min.js' %}"></script>
+<script src="assets/js/jquery-1.11.3.min.js"></script>
 <!-- bootstrap -->
-<script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %} "></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <!-- count down -->
-<script src="{% static 'assets/js/jquery.countdown.js' %} "></script>
+<script src="assets/js/jquery.countdown.js"></script>
 <!-- isotope -->
-<script src="{% static 'assets/js/jquery.isotope-3.0.6.min.js' %}"></script>
+<script src="assets/js/jquery.isotope-3.0.6.min.js"></script>
 <!-- waypoints -->
-<script src="{% static 'assets/js/waypoints.js' %}"></script>
+<script src="assets/js/waypoints.js"></script>
 <!-- owl carousel -->
-<script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+<script src="assets/js/owl.carousel.min.js"></script>
 <!-- magnific popup -->
-<script src="{% static'assets/js/jquery.magnific-popup.min.js' %}"></script>
+<script src="assets/js/jquery.magnific-popup.min.js"></script>
 <!-- mean menu -->
-<script src="{% static 'assets/js/jquery.meanmenu.min.js' %}"></script>
+<script src="assets/js/jquery.meanmenu.min.js"></script>
 <!-- sticker js -->
-<script src="{% static 'assets/js/sticker.js' %}"></script>
+<script src="assets/js/sticker.js"></script>
 <!-- main js -->
-<script src="{% static 'assets/js/main.js' %}"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
